--- a/css/3week.css
+++ b/css/3week.css
@@ -1,19 +1,15 @@
-#site-box {
-	width: 1260px;
-  height: 60px;
-}
+
 
 #a-box {
-  width: 100%;
-  height: 40px;
-   background-color: deepskyblue;
-   text-align: center;
+  text-align: center;
+  padding-top: 3px;
+  padding-bottom: 10px; 
+  background-color: deepskyblue;
 }
 
 #b-box {
 	float: right;
-	width: 900px;
-  height: 600px;
+  width: 800px;
   text-align: left;
 }
 
@@ -30,11 +26,14 @@
 #c-box {
 	float: left;
 	width: 300px;
-  height: 200px;
   text-align: right;
   padding-top: 5px;
   padding-left: 40px;
   margin-top: 20px;
+}
+
+.diarys {
+  margin-left: -100px;
 }
 
 .content2 {
@@ -54,18 +53,13 @@
 }
 
 a.history {
-  margin-left: 10px;
+  margin-left: 60px;
 }
 
 #d-box {
+  margin-top: 600px;
   clear: both;
 	text-align: center;
-  width: 1260px;
-  height: 300px;
-
-}
-h5 {
+  height: 40px;
   background-color: deepskyblue;
-  width: 1260px;
-  height: 30px;
 }
