--- a/css/3week.css
+++ b/css/3week.css
@@ -17,7 +17,7 @@ body {
 }
 
 .diary {
-  border: 1px ridge #e5e5e5;
+  border: 1px solid #e5e5e5;
   margin: 10px 10px 10px 10px;
   padding-top: 10px;
   padding-left: 10px;
