--- a/css/3week.css
+++ b/css/3week.css
@@ -19,8 +19,9 @@ body {
 .diary {
   border: 1px solid #e5e5e5;
   margin: 10px 10px 10px 10px;
-  padding-top: 10px;
+  padding-top: 20px;
   padding-left: 10px;
+  padding-bottom: 10px;
   background-color: white;
   border-radius: 5px;
 }
