--- a/css/3week.css
+++ b/css/3week.css
@@ -1,7 +1,6 @@
 body {
-  background-image: url(../member_picture/Hayato.jpg);
+  background-image: url(../member_picture/Alanwalker3.JPG);
   background-size: cover;
-  background-position: fixed;
 }
 
 #a-box {
